--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-PORT=4000
-DB_USER=postgres
-DB_PASSWORD=123456
-DB_HOST=192.168.20.20
+PORT= puerto de la api 
+DB_USER=usuario postgres
+DB_PASSWORD=password postgres
+DB_HOST= ip interno de postgres
 DB_HOST_LOCAL=127.0.0.1
-DB_NAME=food
-DB_PORT=5432
+DB_NAME= nombre de la bbdd a conectar
+DB_PORT= puerto interno de la bbdd postgres 5432
 API_KEY=dcea45dee6ed4f50834f13a52413b043
